Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76068

Error in QMake leads to infinite loop in jom.exe

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.5, 5.13.1
    • 5.12.0
    • Build tools: qmake
    • None
    • Windows 8 Qt 5.12.3 Qt Creator 4.90 MSVC 2017 64 Bit
    • Windows
    • 085d1335d16210467cbd29f44e046a0f5fe8970f (qt/qtbase/5.12)

    Description

      The following little project let's jom run in an infinite loop:

      TEMPLATE =subdirs CONFIG += ordered
      SUBDIRS += \
      GPSUtility \
      GPSWidgets \ \ <<-- removing this backslash makes everything work
      GPS-Scan \

      Attachments

        For Gerrit Dashboard: QTBUG-76068
        # Subject Branch Project Status CR V

        Activity

          People

            jbornema Joerg Bornemann
            gepi Gerhard Pille
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes